--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "*"
-serde = { version = "*", features = ["derive"] }
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
