--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rouse"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "barebones NPM concurrently clone"
 license = "MIT"
+repository = "https://github.com/jakswa/rouse"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
