--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rouse"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "barebones NPM concurrently clone"
 license = "MIT"
@@ -11,3 +11,5 @@ repository = "https://github.com/jakswa/rouse"
 [dependencies]
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+owo-colors = "3.5.0"
+fastrand = "1.8.0"
